--- a/templates/reboot.html
+++ b/templates/reboot.html
@@ -112,7 +112,7 @@
         >
           Cancelar
         </button>
-        <button type="button" id="updateBTN" class="btn btn-warning" disabled>
+        <button type="button" id="updateBTN" class="btn btn-secondary" disabled>
           Actualizar
         </button>
       </div>
