--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -24,6 +24,8 @@
               <a data-toggle="tab" href="#personal" class=" {% if registro %}active  {% endif %}list-group-item list-group-item-action {% if not session["root"] %}disabled {% endif %}" >Registrar nuevo usuario</a>
 
               <a data-toggle="tab" href="#lista" class=" {% if lista %}active  {% endif %}list-group-item list-group-item-action {% if not session["root"] %}disabled {% endif %}" >Usuarios</a>
+
+              <a data-toggle="tab" href="#asignacion" class=" {% if asignacion %}active  {% endif %}list-group-item list-group-item-action {% if not session["root"] %}disabled {% endif %}" >Salidas</a>
           </div> 
 		</div>
 		<div class="col-md-9 fadeInDown">
@@ -202,9 +204,7 @@
                                   <button type="button" class="btn-danger" data-toggle="modal" id="reboot" data-target="#rebootModal" >
                                     Reiniciar del Sistema
                                   </button>
-                                  <button type="button" class="btn-warning" data-toggle="modal" id="update" data-target="#updateModal" disabled>
-                                      Actualizar del Sistema
-                                    </button>
+                                  
                                 </div>
                               </div>
                               <strong> Todos los campos son obligatorios </strong>
@@ -230,6 +230,25 @@
 
               {% include "lista.html" %}
 
+          </div>
+          <div class="tab-pane {% if asignacion %} active {% endif %}" id="asignacion">
+              <div class="row">
+                <div class="col-md-12">
+                    <h4>Asignación de salidas </h4>
+                    <hr>
+                </div>
+              </div>
+
+              {% include "salidas.html" %}
+              <div class="form-group row">
+                  <div class="offset-4 col-8">
+                    <button type="button" class="btn-success"id="asigBTN" >
+                      Actualizar Asignación
+                    </button>
+                    
+                  </div>
+                </div>
+                <strong> Todos los campos son obligatorios </strong>
           </div>
             </div>	            
 		        </div>
@@ -327,6 +346,15 @@ function move(theBarra, tiempo) {
   }
   
 }
+</script>
+
+<script>
+  boton = document.getElementById("asigBTN");
+  boton.addEventListener("click", asignacion);
+  function asignacion(){
+
+    alert("hola")
+  }
 </script>
 
 
