--- a/templates/salidas.html
+++ b/templates/salidas.html
@@ -22,7 +22,7 @@
             </td>
             <td>{{tap.2}}</td>
             <td>
-              <select name="neva{{tap.2}}">
+              <select id="tapName{{tap.2}}">
                 <option value="" selected hidden>Nuevo usuario</option>
                 <option value="0">Ninguno</option>
                 {% for contact in contactos %}
