--- a/templates/log.html
+++ b/templates/log.html
@@ -48,6 +48,18 @@
         >Salidas</a
       >
     </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        id="fotos-tab"
+        data-toggle="tab"
+        href="#fotos"
+        role="tab"
+        aria-controls="fotos"
+        aria-selected="false"
+        >Fotos</a
+      >
+    </li>
   </ul>
   <div class="tab-content" id="myTabContent">
     <div
@@ -94,6 +106,14 @@
         >{{ salida }}
 </textarea
       >
+    </div>
+    <div
+      class="tab-pane fade"
+      id="fotos"
+      role="tabpanel"
+      aria-labelledby="fotos-tab"
+    >
+      {% include "galery.html" %}
     </div>
   </div>
 </div>
