--- a/templates/galery.html
+++ b/templates/galery.html
@@ -1,52 +1,1 @@
-{% block head %}
-<link
-  rel="stylesheet"
-  href="{{url_for('static', filename='css/modal-images.css')}}"
-/>
-{% endblock %}
-
-<div class="container mt-2">
-  <!-- Trigger the Modal -->
-
-  {% for ruta in rutas %}
-
-  <img
-    id="{{ruta[20:39]}}"
-    src="{{ ruta }}"
-    alt="{{ruta[20:39]}}"
-    style="width:100%;max-width:150px"
-  />
-  {% endfor %}
-  <!-- The Modal -->
-  <div id="myModal" class="modal">
-    <span class="close">&times;</span>
-    <img class="modal-content" id="img01" />
-    <!-- Modal Caption (Image Text) -->
-    <div id="caption"></div>
-  </div>
-</div>
-
-{% block script %}
-<script>
-  var modal = document.getElementById("myModal");
-  var img = document.getElementById("myImg");
-  var img2 = document.getElementById("myImg2");
-  var modalImg = document.getElementById("img01");
-  var captionText = document.getElementById("caption");
-  img.onclick = function() {
-    modal.style.display = "block";
-    modalImg.src = this.src;
-    captionText.innerHTML = this.alt;
-  };
-  var span = document.getElementsByClassName("close")[0];
-  span.onclick = function() {
-    modal.style.display = "none";
-  };
-  img2.onclick = function() {
-    modal.style.display = "block";
-    modalImg.src = this.src;
-    captionText.innerHTML = this.alt;
-  };
-</script>
-
-{% endblock %}
+{% block head %} {% endblock %}
