--- a/templates/log.html
+++ b/templates/log.html
@@ -113,51 +113,7 @@
       role="tabpanel"
       aria-labelledby="fotos-tab"
     >
-      <div class="container mt-2">
-        <!-- Trigger the Modal -->
-
-        {% for ruta in rutas %}
-
-        <img
-          id="{{ ruta }}"
-          src="{{ ruta }}"
-          alt="{{ ruta }}"
-          style="width:100%;max-width:150px"
-        />
-        {% endfor %}
-        <!-- The Modal -->
-        <div id="myModal" class="modal">
-          <span class="close">&times;</span>
-          <img class="modal-content" id="img01" />
-          <!-- Modal Caption (Image Text) -->
-          <div id="caption"></div>
-        </div>
-      </div>
+      {% include "galery.html" %}
     </div>
   </div>
 </div>
-
-{% block script %}
-<script>
-  var modal = document.getElementById("myModal");
-  var img = document.getElementById("myImg");
-  var img2 = document.getElementById("myImg2");
-  var modalImg = document.getElementById("img01");
-  var captionText = document.getElementById("caption");
-  img.onclick = function() {
-    modal.style.display = "block";
-    modalImg.src = this.src;
-    captionText.innerHTML = this.alt;
-  };
-  var span = document.getElementsByClassName("close")[0];
-  span.onclick = function() {
-    modal.style.display = "none";
-  };
-  img2.onclick = function() {
-    modal.style.display = "block";
-    modalImg.src = this.src;
-    captionText.innerHTML = this.alt;
-  };
-</script>
-
-{% endblock %}
