--- a/templates/galery.html
+++ b/templates/galery.html
@@ -10,7 +10,7 @@
   <img
     id="2019-09-15_10.30.15.jpg"
     src="file:/var/log/iot/camera/2019-09-15_10.30.15.jpg"
-    alt="2019-09-15_10.30.15.jpg}"
+    alt="2019-09-15_10.30.15.jpg"
     style="width:100%;max-width:150px"
   />
 
