--- a/templates/galery.html
+++ b/templates/galery.html
@@ -9,7 +9,7 @@
   <!-- Trigger the Modal -->
   <img
     id="2019-09-15_10.30.15.jpg"
-    src="{{url_for('static', filename='img/camera/2019-09-15_10.30.15.jpg'}}"
+    src="{{url_for('static', filename='img/camera/2019-09-15_10.30.15.jpg')}}"
     alt="2019-09-15_10.30.15.jpg"
     style="width:100%;max-width:150px"
   />
