--- a/templates/galery.html
+++ b/templates/galery.html
@@ -15,7 +15,7 @@
   />
   <img
     id="2019-09-15_10.30.15.jpg"
-    src="{{url_for('static', filename='img/camera/2019-09-15_10.30.15.jpg')}}"
+    src="{{url_for('static', filename='img/camara/2019-09-15_10.30.15.jpg')}}"
     alt="2019-09-15_10.30.15.jpg"
     style="width:100%;max-width:150px"
   />
@@ -23,7 +23,7 @@
 
   <img
     id="{{ ruta }}"
-    src="{{url_for('static', filename='img/camera/{{ruta}}')}}"
+    src="{{url_for('static', filename='img/camara/{{ruta}}')}}"
     alt="{{ ruta }}"
     style="width:100%;max-width:150px"
   />
