--- a/templates/galery.html
+++ b/templates/galery.html
@@ -23,7 +23,7 @@
 
   <img
     id="{{ ruta }}"
-    src="{{url_for('static', filename='img/camara/{{ruta}}')}}"
+    src="{{url_for('static', filename='img/camara/' + ruta)}}"
     alt="{{ ruta }}"
     style="width:100%;max-width:150px"
   />
