--- a/templates/salidas.html
+++ b/templates/salidas.html
@@ -4,10 +4,10 @@
       <table class="table table-bordered table-striped bg-white table-sm">
         <thead>
           <tr>
-            <td>Nombre</td>
-            <td>Usuario asignado</td>
-            <td>Salida</td>
-            <td>Nueva asignación</td>
+            <td><strong>Nombre</strong></td>
+            <td><strong>Usuario asignado</strong></td>
+            <td><strong>Salida</strong></td>
+            <td><strong>Nueva asignación</strong></td>
           </tr>
         </thead>
         <tbody>
