--- a/templates/salidas.html
+++ b/templates/salidas.html
@@ -19,7 +19,7 @@
 
             <td>
               {% for contact in contactos %} {%if tap.1 == contact.0 %}
-              <strong>{{contact.1}}</strong>
+              <strong id="Nombre{{tap.2}}">{{contact.1}}</strong>
               {% endif %} {% endfor %}
             </td>
             <td>{{tap.2}}</td>
