--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -349,17 +349,23 @@ function move(theBarra, tiempo) {
 </script>
 
 <script>
-  var boton = document.getElementById("asigBTN");
-  boton.addEventListener("click", asignacion);
-  var result = [];
-  {% for tap in taps %}
-  var tapV{{tap.2}} = document.getElementById("tapName{{tap.2}}");
-  var nombre{{tap.2}} = document.getElementById("Nombre{{tap.2}}");
-  var selected{{tap.2}}; 
-  {% endfor %}
-
   
-  function asignacion(){
+    var boton = document.getElementById("asigBTN");
+    boton.addEventListener("click", asignacion);
+    var result = [];
+    
+    var tapV18 = document.getElementById("tapName18");
+    var nombre18 = document.getElementById("Nombre18");
+    var selected18; 
+    var tapV23 = document.getElementById("tapName23");
+    var nombre23 = document.getElementById("Nombre23");
+    var selected23; 
+    var tapV24 = document.getElementById("tapName24");
+    var nombre24 = document.getElementById("Nombre24");
+    var selected24; 
+    
+
+    function asignacion(){
     {% for tap in taps %}
     selected{{tap.2}} = tapV{{tap.2}}.options[tapV{{tap.2}}.selectedIndex];
     result.push({{tap.2}});
@@ -376,27 +382,13 @@ function move(theBarra, tiempo) {
 
   function toDo(algo){
     alert(algo.msj)
-    if (algo.result == 1){
-    {% for tap in taps %}
-    nombre{{tap.2}}.innerHTML ="";
-    {% endfor %}
-
-      for (i = 0; i < result.length; i = i +2) {
-      {% for tap in taps %}
-        if (result[i] == {{tap.2}}){
-          {% for contact in contactos %}
-            if (result[i+1] == {{contact.0}}){
-              nombre{{tap.2}}.innerHTML = "{{contact.1}}";
-            }
-          {% endfor %}
-        }
-      {% endfor %}
-      }
-      console.log("Cambiar los valores de la tabla y limpiar el array")
-      
-    }
+    console.log(algo.tap)
+    nombre18.innerHTML = algo.tap[0];
+    nombre23.innerHTML = algo.tap[1];
+    nombre24.innerHTML = algo.tap[2];
     result = [];
   }
+
 </script>
 
 
