--- a/templates/salidas.html
+++ b/templates/salidas.html
@@ -11,20 +11,17 @@
           </tr>
         </thead>
         <tbody>
-          {% for tap in taps %}
           <tr>
-            <td class="bg-{{tap.3}}">
-              <strong>{{tap.0}}</strong>
+            <td class="bg-{{taps.0.3}}">
+              <strong>{{taps.0.0}}</strong>
             </td>
 
             <td>
-              {% for contact in contactos %} {%if tap.1 == contact.0 %}
-              <strong id="Nombre{{tap.2}}">{{contact.1}}</strong>
-              {% endif %} {% endfor %}
+              <strong id="Nombre18">{{taps.0.1}}</strong>
             </td>
-            <td>{{tap.2}}</td>
+            <td>{{taps.0.2}}</td>
             <td>
-              <select id="tapName{{tap.2}}">
+              <select id="tapName18">
                 <option value="" selected hidden>Nuevo usuario</option>
                 <option value="0">Ninguno</option>
                 {% for contact in contactos %}
@@ -33,7 +30,46 @@
               </select>
             </td>
           </tr>
-          {% endfor %}
+          <tr>
+            <td class="bg-{{taps.1.3}}">
+              <strong>{{taps.1.0}}</strong>
+            </td>
+
+            <td>
+              <strong id="Nombre23">{{taps.1.1}}</strong>
+            </td>
+
+            <td>{{taps.1.2}}</td>
+            <td>
+              <select id="tapName23">
+                <option value="" selected hidden>Nuevo usuario</option>
+                <option value="0">Ninguno</option>
+                {% for contact in contactos %}
+                <option value="{{contact.0}}">{{contact.1}}</option>
+                {% endfor %}
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td class="bg-{{taps.2.3}}">
+              <strong>{{taps.2.0}}</strong>
+            </td>
+
+            <td>
+              <strong id="Nombre24">{{taps.2.1}}</strong>
+            </td>
+
+            <td>{{taps.2.2}}</td>
+            <td>
+              <select id="tapName24">
+                <option value="" selected hidden>Nuevo usuario</option>
+                <option value="0">Ninguno</option>
+                {% for contact in contactos %}
+                <option value="{{contact.0}}">{{contact.1}}</option>
+                {% endfor %}
+              </select>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
