--- a/templates/layout.html
+++ b/templates/layout.html
@@ -82,6 +82,13 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('perfil') }}">Ajustes</a>
           </li>
+          {% if session["root"] %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('pictures') }}"
+              >Imágenes tomadas</a
+            >
+          </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>
           </li>
