--- a/templates/galery.html
+++ b/templates/galery.html
@@ -6,7 +6,7 @@
 />
 {% endblock %} {% block body %}
 
-<div class="container mt-2">
+<div class="container mt-2 rounded text-white">
   <!-- Trigger the Modal -->
 
   {% for ruta in rutas %}
