--- a/templates/galery.html
+++ b/templates/galery.html
@@ -6,7 +6,7 @@
 />
 {% endblock %} {% block body %}
 
-<div class="container mt-2 card">
+<div class="container mt-2 shadow bg-white rounded mx-auto">
   <!-- Trigger the Modal -->
 
   {% for ruta in rutas %}
