--- a/templates/galery.html
+++ b/templates/galery.html
@@ -16,6 +16,7 @@
     src="{{url_for('static', filename='img/camara/' + ruta)}}"
     alt="{{ ruta }}"
     style="width:100%;max-width:150px"
+    class=" mt-4 mr-2"
   />
   {% endfor %}
   <!-- The Modal -->
