--- a/templates/galery.html
+++ b/templates/galery.html
@@ -16,7 +16,7 @@
     src="{{url_for('static', filename='img/camara/' + ruta)}}"
     alt="{{ ruta }}"
     style="width:100%;max-width:150px"
-    class="  mr-2 mb-2 ml-4"
+    class=" mt-2  mb-2 ml-4"
   />
   {% endfor %}
   <!-- The Modal -->
