--- a/static/css/modal-images.css
+++ b/static/css/modal-images.css
@@ -1,10 +1,13 @@
-#myImg {
+#fotos {
+  opacity: 0.4;
+}
+.foto {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#myImg:hover {
+.foto :hover {
   opacity: 0.7;
 }
 
