--- a/templates/galery.html
+++ b/templates/galery.html
@@ -6,7 +6,7 @@
 />
 {% endblock %} {% block body %}
 
-<div class="container mt-2 shadow bg-white rounded mx-auto">
+<div class="container mt-2 shadow bg-white rounded mx-auto" id="fotos">
   <!-- Trigger the Modal -->
 
   {% for ruta in rutas %}
@@ -16,7 +16,7 @@
     src="{{url_for('static', filename='img/camara/' + ruta)}}"
     alt="{{ ruta }}"
     style="width:100%;max-width:150px"
-    class=" mt-3 mb-3 ml-4"
+    class=" foto mt-3 mb-3 ml-4"
   />
   {% endfor %}
   <!-- The Modal -->
