--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -281,7 +281,7 @@ boton2 = document.getElementById("updateBTN");
 cerrar2 = document.getElementById("cerrar2");                      
 barra2.style.display = "none";
 
-boton.addEventListener("click", reinicio);
+boton1.addEventListener("click", reinicio);
 boton2.addEventListener("click", actualizacion);
 
 function actualizacion() {
