--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -303,7 +303,7 @@ function actualizacion() {
 
 function reinicio() {
     
-    /*$.get("/reinicio", function() {})
+    $.get("/reinicio", function() {})
       .done(function(out) {
         
         console.log(out);
@@ -312,7 +312,7 @@ function reinicio() {
         
         console.log("fail reinicio");
       });
-      */
+      
       move(barra1, 35);
     //document.getElementById("Cerrar").click();
   }
