--- a/templates/reloj.html
+++ b/templates/reloj.html
@@ -17,6 +17,7 @@
       });
   }
   function reloj(result) {
+    console.log(result);
     dt = new Date(
       result[0],
       result[1],
@@ -35,6 +36,7 @@
     mm = ("0" + dt.getMinutes()).slice(-2);
     ss = ("0" + dt.getSeconds()).slice(-2);
     date_string = YYYY + "-" + MM + "-" + DD + " " + hh + ":" + mm + ":" + ss;
+    document.getElementById("reloj").innerHTML = date_string;
 
     // will output something like "2019-02-14 11:04:42"
     // funcion de mono manual
@@ -43,7 +45,7 @@
     } else {
       document.getElementById("manualmode").innerHTML = "Modo Manual";
     }
-    document.getElementById("reloj").innerHTML = date_string;*/
+    */
 
     var t = setTimeout(startTime, 1000);
   }
