--- a/templates/calendarScp.html
+++ b/templates/calendarScp.html
@@ -1,4 +1,6 @@
 <script>
+  var calendar;
+  var calendarEl;
   document.addEventListener("DOMContentLoaded", function() {
     var x = document.getElementById("Duration");
     var y = document.getElementById("login-2");
@@ -24,8 +26,8 @@
         }
       });
 
-    var calendarEl = document.getElementById("calendar");
-    var calendar = new FullCalendar.Calendar(calendarEl, {
+    calendarEl = document.getElementById("calendar");
+    calendar = new FullCalendar.Calendar(calendarEl, {
       locale: "es",
 
       plugins: ["dayGrid", "timeGrid", "list", "interaction"],
@@ -96,87 +98,56 @@
         //info.el.style.borderColor = "red";
       }
     });
-    function borrar(id) {
-      var mensaje;
-      var opcion = confirm("¿Está Seguro de querer eliminar el evento?");
-      if (opcion == true) {
-        $.post(
-          "/deletEvent",
-          {
-            canvas_data: JSON.stringify(id)
-          },
-          function() {
-            window.location.href = "/calendar";
-          }
-        );
-        window.location.href = "/calendar";
-      }
-    }
-
     calendar.render();
   });
+
+  function borrar(id) {
+    var mensaje;
+    var opcion = confirm("¿Está Seguro de querer eliminar el evento?");
+    if (opcion == true) {
+      $.post("/deletEvent", {
+        canvas_data: JSON.stringify(id)
+      }).done(function(reply) {
+        console.log(reply);
+
+        calendar.refetchEvents();
+      });
+    }
+  }
 </script>
 
 <script>
-  document
-    .getElementById("manualBTN")
-    .addEventListener("click", myFunctionManual);
-  document.getElementById("autoBTN").addEventListener("click", myFunctionAuto);
+  var confirmaManual = document.getElementById("manualBTN");
+  var manualBTN = document.getElementById("manual");
 
-  function refresh() {
-    $.get("/manualdata", function() {})
-      .done(function(out) {
-        toDo(out);
-      })
-      .fail(function() {
-        console.log("fail manualData");
-        var t = setTimeout(refresh, 100);
-      });
-  }
-  function toDo(data) {
-    if (data.estado == "0") {
-      document.getElementById("borra").style.visibility = "hidden";
-      document.getElementById("auto").style.visibility = "hidden";
-      document.getElementById("manual").style.visibility = "visible";
-    } else {
-      document.getElementById("manual").style.visibility = "hidden";
-      document.getElementById("borra").style.visibility = "visible";
-      document.getElementById("auto").style.visibility = "visible";
-    }
-  }
+  var confirmaAuto = document.getElementById("autoBTN");
+  var autoBTN = document.getElementById("auto");
+  autoBTN.style.display = "none";
+
+  var confirmaBorrado = document.getElementById("borradoBTN");
+  var borraBTN = document.getElementById("borra");
+  borraBTN.style.display = "none";
+
+  confirmaManual.addEventListener("click", myFunctionManual);
+  confirmaAuto.addEventListener("click", myFunctionAuto);
 
   function myFunctionManual() {
-    $.get("/manual", function() {})
-      .done(function(out) {
-        refresh();
-      })
-      .fail(function() {
-        console.log("fail manual");
-        var t = setTimeout(myFunctionManual, 100);
-      });
-    refresh();
+    autoBTN.style.display = "block";
+    borraBTN.style.display = "block";
+    manualBTN.style.display = "none";
     document.getElementById("manualCerrar").click();
   }
 
   function myFunctionAuto() {
-    console.log("Hola ");
-
-    $.get("/auto", function() {})
-      .done(function(out) {
-        refresh();
-      })
-      .fail(function() {
-        console.log("fail auto");
-        var t = setTimeout(myFunctionAuto, 100);
-      });
-    refresh();
+    autoBTN.style.display = "none";
+    borraBTN.style.display = "none";
+    manualBTN.style.display = "block";
     document.getElementById("autoCerrar").click();
   }
 </script>
 
 <script>
   window.onload = function() {
-    refresh();
     /*
     var repe = document.getElementById("repe");
     var repeSelected;
@@ -250,11 +221,9 @@
 
     usr.addEventListener("change", function() {
       usrSelected = this.options[usr.selectedIndex];
-      console.log("El usuario seleccionado a borrar es" + usrSelected);
     });
     function myFunction() {
       borradoItem();
-      console.log("Hola " + selectedOption.value + "Fin");
     }
 
     function borradoItem() {
@@ -286,15 +255,12 @@
             "Se borrará TODOS los eventos, ¿Está seguro/a de querer continuar?"
           );
           if (men == true) {
-            $.post(
-              "/deletFull",
-              {
-                canvas_data: JSON.stringify(valor)
-              },
-              function(err, req, resp) {
-                window.location.href = "/results/" + resp["responseJSON"];
-              }
-            );
+            $.post("/deletFull", {
+              canvas_data: JSON.stringify(valor)
+            }).done(function(reply) {
+              console.log(reply);
+              calendar.refetchEvents();
+            });
           }
         }
         if (valor == 1) {
@@ -302,15 +268,12 @@
             "Se borrará TODOS los eventos que comiecen en el día seleccionado ¿Está seguro/a de querer continuar?"
           );
           if (men == true) {
-            $.post(
-              "/deletDay",
-              {
-                canvas_data: JSON.stringify(date)
-              },
-              function(err, req, resp) {
-                window.location.href = "/results/" + resp["responseJSON"];
-              }
-            );
+            $.post("/deletDay", {
+              canvas_data: JSON.stringify(date)
+            }).done(function(reply) {
+              console.log(reply);
+              calendar.refetchEvents();
+            });
           }
         }
         if (valor == 2) {
@@ -318,15 +281,12 @@
             "Se borrará TODOS los eventos del usuario seleccionado ¿Está seguro/a de querer continuar?"
           );
           if (men == true) {
-            $.post(
-              "/deletUser",
-              {
-                canvas_data: JSON.stringify(obj)
-              },
-              function(err, req, resp) {
-                window.location.href = "/results/" + resp["responseJSON"];
-              }
-            );
+            $.post("/deletUser", {
+              canvas_data: JSON.stringify(obj)
+            }).done(function(reply) {
+              console.log(reply);
+              calendar.refetchEvents();
+            });
           }
         }
         if (valor == 3) {
@@ -334,23 +294,17 @@
             "Se borrará TODOS los eventos del usuario que empiecen en la fecha seleccionada ¿Está seguro/a de querer continuar?"
           );
           if (men == true) {
-            $.post(
-              "/delet2",
-              {
-                canvas_data: JSON.stringify(obj),
-                canvas_data_date: JSON.stringify(date)
-              },
-              function(err, req, resp) {
-                window.location.href = "/results/" + resp["responseJSON"];
-              }
-            );
+            $.post("/delet2", {
+              canvas_data: JSON.stringify(obj),
+              canvas_data_date: JSON.stringify(date)
+            }).done(function(reply) {
+              console.log(reply);
+              calendar.refetchEvents();
+            });
           }
         }
-
-        window.location.href = "/calendar";
       } else {
       }
     }
-    startTime();
   };
 </script>
