--- a/templates/reloj.html
+++ b/templates/reloj.html
@@ -6,6 +6,7 @@
   var mm;
   var ss;
   var date_string;
+
   function startTime() {
     $.get("/ahora", function() {})
       .done(function(out) {
@@ -16,14 +17,14 @@
         var t = setTimeout(startTime, 100);
       });
   }
-  function reloj(out) {
+  function reloj(result) {
     dt = new Date(
-      out.result[0],
-      out.result[1],
-      out.result[2],
-      out.result[3],
-      out.result[4],
-      out.result[5]
+      result[0],
+      result[1],
+      result[2],
+      result[3],
+      result[4],
+      result[5]
     );
 
     // ensure date comes as 01, 09 etc
@@ -35,14 +36,8 @@
     mm = ("0" + dt.getMinutes()).slice(-2);
     ss = ("0" + dt.getSeconds()).slice(-2);
     date_string = YYYY + "-" + MM + "-" + DD + " " + hh + ":" + mm + ":" + ss;
-
-    // will output something like "2019-02-14 11:04:42"
-    if (out.estado == "0") {
-      document.getElementById("manualmode").innerHTML = "";
-    } else {
-      document.getElementById("manualmode").innerHTML = "Modo Manual";
-    }
     document.getElementById("reloj").innerHTML = date_string;
+    // will output something like "2019-02-14 11:04:42"
 
     var t = setTimeout(startTime, 1000);
   }
